Fixed dark mode hover / active being darker instead of lighter

--- a/src/themes.scss
+++ b/src/themes.scss
@@ -25,15 +25,15 @@
 	@return if($weight > 0, shade-color($color, $weight), tint-color($color, -$weight));
 }
 
-@mixin scheme-lt($name, $key, $keywd, $str, $num, $text: #212529, $border: #dee2e6, $body: #fff, $tertiary: #f8f9fa, $secondary: #e9ecef) {
-	@include scheme($name, light, $key, $keywd, $str, $num, $text, $border, $body, $tertiary, $secondary)
+@mixin scheme-lt($name, $key, $keywd, $str, $num, $text: #212529, $border: #dee2e6, $body: #fff, $tertiary: #f8f9fa, $secondary: #e9ecef, $tertiaryModif: 2%, $borderModif: 10%) {
+	@include scheme($name, light, $key, $keywd, $str, $num, $text, $border, $body, $tertiary, $secondary, $tertiaryModif, $borderModif);
 }
 
-@mixin scheme-dk($name, $key, $keywd, $str, $num, $text: #adb5bd, $border: #495057, $body: #212529, $tertiary: #2b3035, $secondary: #343a40) {
-	@include scheme($name, dark, $key, $keywd, $str, $num, $text, $border, $body, $tertiary, $secondary)
+@mixin scheme-dk($name, $key, $keywd, $str, $num, $text: #adb5bd, $border: #495057, $body: #212529, $tertiary: #2b3035, $secondary: #343a40, $tertiaryModif: -5%, $borderModif: -10%) {
+	@include scheme($name, dark, $key, $keywd, $str, $num, $text, $border, $body, $tertiary, $secondary, $tertiaryModif, $borderModif);
 }
 
-@mixin scheme($name, $mode, $key, $keywd, $str, $num, $text, $border, $body, $tertiary, $secondary) {
+@mixin scheme($name, $mode, $key, $keywd, $str, $num, $text, $border, $body, $tertiary, $secondary, $tertiaryModif, $borderModif) {
 	:global([data-bs-theme="#{$mode}"][data-scheme="#{$name}"]),
 	:global([data-bs-theme="#{$mode}"] [data-scheme="#{$name}"]),
 	:global([data-scheme="#{$name}"] [data-bs-theme="#{$mode}"]) {
@@ -50,9 +50,9 @@
 		@include bs-color(secondary-bg, $secondary);
 		@include bs-color(secondary-color, rgba($text, 0.75));
 	
-		@include bs-colors("cst-btn", "bg", $tertiary, 2%);
+		@include bs-colors("cst-btn", "bg", $tertiary, $tertiaryModif);
 		@include bs-colors("cst-btn", "color", $text);
-		@include bs-colors("cst-btn", "border-color", $border, 10%);
+		@include bs-colors("cst-btn", "border-color", $border, $borderModif);
 
 		@content;
 	}
